# mcp

./: .gitignore  README.md
base64_to_image/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
base64_to_image/templates/: index.html
brave_search_mcp_server/: .gitignore  Dockerfile  MCP_CONNECTION_GUIDE.md  N8N_MCP_GUIDE.md  POSTMAN_MCP_GUIDE.md  README.md  UBUNTU_SERVER_SETUP.md  brave_search_mcp_server.py  deploy.sh  diagnose_server_connection.sh  docker-compose.yml  fix_server_connection.sh  gonsshdefault.pem  requirements.txt  test_connection.sh  ubuntu_diagnose.sh  ubuntu_fix.sh
client/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  simple_mcp_client.py
duckduckgo_search_mcp_server/: Dockerfile  README.md  docker-compose.yml  requirements.txt
duckduckgo_search_mcp_server_to_uv/: README.md  docker-compose.yml  duckduckgo_mcp_server.py  pyproject.toml
gmail_mcp_server/: Dockerfile  README.md  create_self_signed_cert.sh  credentials.json  deploy.md  docker-compose.yml  gmail_mcp_server.py  nginx.conf  ngrok_deploy.sh  pyproject.toml  setup_guide.md  setup_ssl.sh  simple_mcp_server.py
image_converter_mcp_server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  image_converter_mcp_server.py  requirements.txt
mcp_duckduckgo_search/: Dockerfile  docker-compose.yml  pyproject.toml
mcp_finance_search/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_tools.py
mcp_finance_search/.claude/: settings.local.json
mcp_finance_search/scripts/: build_docker.sh  run_server.sh
mcp_finance_search/src/: finance_server.py
mcp_skb_content_search/: .dockerignore  Dockerfile  docker-compose.yml
mcp_skb_search/: README.md  docker-compose.yml  main.py  pyproject.toml
mcp_ssh_cmd_server/: .dockerignore  Dockerfile  docker-compose.yml  example_server.py
mcp_upbit/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_setup.py
mcp_upbit/mcp_upbit/: __init__.py  fastmcp_server.py  http_server.py  upbit_client.py
server/: Dockerfile  docker-compose.yml
ssh_cmd_mcp_server/: README.md  docker-compose.yml  pyproject.toml  test_ssh.py
