[project]
name = "gmail-mcp-server"
version = "0.1.0"
description = "Gmail MCP Server for reading and sending emails"
authors = [
    {name = "Gmail MCP Server", email = "noreply@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "google-auth>=2.17.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.88.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []