[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckduckgo-mcp-server"
version = "0.1.0"
description = "AI Agent에서 DuckDuckGo 검색 기능을 사용할 수 있도록 하는 MCP (Model Context Protocol) 서버"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Assistant"}
]
keywords = ["mcp", "duckduckgo", "search", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP Server dependencies
    "mcp>=1.0.0",
    # HTTP client for web requests
    "httpx>=0.25.0",
    # HTML parsing for search results
    "beautifulsoup4>=4.12.0",
    # Additional dependencies for better compatibility
    "lxml>=4.9.0",
    "html5lib>=1.1",
    # Optional: for better async support
    "anyio>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/example/duckduckgo-mcp-server"
Repository = "https://github.com/example/duckduckgo-mcp-server"
Issues = "https://github.com/example/duckduckgo-mcp-server/issues"

[project.scripts]
duckduckgo-mcp-server = "duckduckgo_mcp_server:main"

[tool.setuptools]
py-modules = ["duckduckgo_mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
