[project]
name = "mcp-finance-server"
version = "0.1.0"
description = "FastMCP-based finance data tool server"
authors = [
    {name = "Assistant", email = "assistant@example.com"}
]
dependencies = [
    "fastmcp>=0.2.0",
    "yfinance>=0.2.28",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "asyncio-throttle>=1.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E203", "E501"]

[tool.black]
line-length = 88
target-version = ['py310']