[project]
name = "mcp-skb-content-search"
version = "0.1.0"
description = "MCP Server for SKB content search"
authors = [{name = "MCP SKB Content Search", email = "noreply@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.6.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
    "beautifulsoup4>=4.12.0",
    "urllib3>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []